<resources>
    <string name="app_name">SmartFS</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="NavMenuItemSettings">Settings</string>
    <string name="sharestring">Share</string>
    <string name="helpstring">Help</string>
    <string name="contactusstring">Contact Us</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignIn</string>
        <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_id_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_option_home">Sign In</string>
    <string name="sign_up_option_home">Sign Up</string>
    <string name="sign_in_msg_home">Please SignIn to get this feature</string>
    <string name="vp_home_option">"      Home       "</string>
    <string name="vp_info_option">"      Info       "</string>
    <string name="vp_news_option">"      News       "</string>
    <string name="role_farmer">"Farmer"</string>
    <string name="role_godownmanager">"Go-Down Manager"</string>
    <string name="role_both">"Both"</string>
    <string name="MyProfileString">"My Profile"</string>
    <string name="Notificationstring">"Notifications"</string>
    <string name="consequencestring">"Consequences"</string>
    <string name="signoutstring">"Sign-Out"</string>
    <string name="weatherinfostring">Farm status</string>
    <string name="signup_email">Email ID</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="signup_name">Full Name</string>
    <string name="error_password_mismatch">Password not matching</string>
    <string name="title_activity_my_farm">MyFarm</string>
    <string name="title_activity_my_ware_house">MyWareHouse</string>
    <string name="TemperatureString">Temperature</string>
    <string name="HumidityString">Humidity</string>
    <string name="SoilMoistureString">Soil Moisture</string>
    <string name="CropNameString">Crop Name</string>
    <string name="SeedTypeString">Seed Type</string>
    <string name="FarmAreaString">Farm Area</string>
    <string name="PeriodofHarvestingString">Period of Harvesting</string>
    <string name="PeriodofSowingString">Period of Sowing</string>
    <string name="HardwareIDString">Hardware ID</string>
    <string name="FarmDataString">Farm Data</string>
    <string name="CurrentFarmStatusString">Current Farm Status</string>
    <string name="PredictionsString">Predictions</string>
    <string name="NotificationsString">Notifications</string>
    <string name="TemperatureForecastString">Temperature Forecast</string>
    <string name="HumidityForecastString">Humidity Forecast</string>
    <string name="WheatString">Wheat</string>
    <string name="OnionString">Onion</string>
    <string name="RiceString">Rice</string>
    <string name="AjantaString">Ajanata</string>
    <string name="ArjunString">Arjun</string>
    <string name="ParabhaniString">Parabhani-51</string>
    <string name="MalvikaString">Malvika</string>
    <string name="AmbemoharString">Ambemohar</string>
    <string name="TambdajogString">Tambdajog</string>
    <string name="KrishnasalString">Krishnasal</string>
    <string name="ChampakaliString">Champakali</string>
    <string name="BheemaredString">Bheema-Red</string>
    <string name="BheemashwetaString">Bheema-Shweta</string>
    <string name="BheemasuperString">Bheema-Super</string>
    <string name="AddLocationString">Click Here to Choose the Location</string>
    <string name="title_activity_new_farm">New Field</string>
    <string name="selectcroptype">Select Type of Crop</string>
    <string name="selectcrop">Select Crop</string>
    <string name="nameoffarmstring">Name of Farm</string>
    <string name="addfarmstring">Add Farm</string>
    <string name="infotitlestring1">Maharashtra Agriculture</string>
    <string name="infotitlestring2">Main crops in Maharashtra</string>
    <string name="infotitlestring3">Agro Climatic Zones in Maharashtra</string>
    <string name="infostring1">Agriculture is the mainstay of the state of Maharashtra. It is the main occupation of the people. Both food crops and cash crops are grown in the state. </string>
    <string name="infostring2">The main food crops of Maharashtra are mangoes, grapes, bananas, oranges, wheat, rice, jowar, bajra, and pulses. Cash crops include groundnut, cotton, sugarcane, turmeric, and tobacco. </string>
    <string name="infostring3">India has been divided into 15 resource development zones of which 14 fall in the main land and remaining one in the islands of Bay of Bengal and the Arabian sea.</string>
    <string name="addwarehousehint">Enter the Go-down Name</string>
    <string name="newstitlestring1">Weather-Proof Indian Agriculture: President Mukherjee</string>
    <string name="newstitlestring2">R Gopalakrishnan: Intelligent farming</string>
    <string name="newstitlestring3">Agriculture Minister Emphasizes the need to reduce Post-Harvest Losses in Horticulture</string>
    <string name="clickherestring">Click here to choose location</string>
    <string name="newsstring1">Indian agriculture is increasingly becoming a victim of unpredictable weather. Be it the Monsoon fury or dreading the drought, Indian agriculture is still bearing the brunt of inclement weather by way of declining farm produce and shrinking exports. </string>
    <string name="newsstring2">"The urban excitement about start-ups, entrepreneurship and innovation is missing in farming. Try compiling a repertoire of bottom-of-the-pyramid innovation articles on farming. Agri-business correspondents write reasoned columns</string>
    <string name="newsstring3">Union Agriculture Minister, Shri Sharad Pawar today emphasized the need to reduce post-harvest losses in horticultural sector. He said that 18-25% of horticultural produce is lost, as estimated by the Central Institute of Post-Harvest Engineering and Technology study.</string>
    <string name="activity_addstock_title">Add Stock</string>
    <string name="btn_add_warehouse">Add WareHouse</string>
    <string name="btn_add_stock">Add Stock</string>
    <string name="hint_stock_name">Name of Stock</string>
    <string name="hint_crop_name">Name of Crop</string>
    <string name="hint_crop_type">Type of Crop</string>
    <string name="hint_farmer_name">Name of farmer(Source of Stock)</string>
    <string name="hint_in_time">(Date of Adding stock to Warehouse)</string>
    <string name="hint_amount">Amount of stock(in kgs)</string>
    <string name="hint_harvesting_period">harvesting period of the crop</string>
    <string name="hint_sowing_period">sowing period of the crop</string>
    <string name="ToasString">" To "</string>
    <string name="toasstring">to</string>
    <string name="kgasstring">Kg</string>
    <string name="title_stock_info_dialog">Stock Info</string>
    <string name="title_get_dispatch_amount_dialog">How Much to Dispatch?</string>
    <string name="dialog_stock_crop_type_as_string">Crop-Type:</string>
    <string name="dialog_stock_sowing_period_as_string">Sowing Period:</string>
    <string name="dialog_stock_harvesting_period_as_string">Harvesting Period:</string>
    <string name="dialog_stock_arrival_date_as_string">Arrival Date:</string>
    <string name="dialog_stock_farmer_as_string">Farmer:</string>
    <string name="dialog_stock_amount_as_string">Amount: </string>
    <string name="dialog_accept_dispatch_amount">Amount of crop you want to Dispatch(In Kg)</string>
    <string name="proceed_as_string">Proceed</string>
    <string name="cancel_as_string">Cancel</string>
    <string name="dispatch_as_string">Dispatch</string>
    <string name="final_selected_dispatch_amount">Total Selected Amount: </string>
    <string name="hint_dispatch_stock_amount">e.g.200</string>
    <string name="toast_fill_all_info">Please Fill All the Information</string>
    <string name="warehouse_loading_progressdialog_message">Loading Warehouses...</string>
    <string name="farm_loading_progressdialog_message">Loading ...</string>
    <string name="problem_in_loading_message">Problem in connecting with Server!!!Please try again Later</string>
    <string name="stock_list_loading_progress_dialog_message">Loading list of Stocks</string>
    <string name="processing_stock_dispatch">Processing Stock Dispatch ...</string>
    <string name="adding_warehouse_progress_dialog_message">Adding Warehouse...</string>
    <string name="adding_stock_progress_dialog_message">Adding Stock...</string>
    <string name="finalize_stock_dispatch_progress_dialog_message">Finalizing Stock Dispatch...</string>
    <string name="fetching_stock_info_progress_dialog_message">Fetching Stock Info</string>
    <string name="add_farm_progress_bar_message">Adding Farm ...</string>
    <string name="mywarehousetitle_stockname">Stock</string>
    <string name="mywarehousetitle_cropname">Crop</string>
    <string name="mywarehousetitle_amount">Amt(Kg)</string>
    <string name="mywarehousetitle_todispatchamount">Dispatch(Kg)</string>
    <string name="forecast_prediction_button">Weather Forecast</string>
    <string name="title_forecast_dialog">Forecast Dialog</string>
    <string name="title_temp_forecast">Temperature Forecast</string>
    <string name="title_hum_forecast">Humidity Forecast</string>
    <string name="fetching_forecast_data_as_string">Fetching Forecast Data ...</string>
    <string name="addfarm_activity_title">New Field</string>
    <string name="toast_no_internet_connection_as_string">No Internet Connection</string>
    <string name="toast_stock_addition_failed">Stock Addition Failed!!!</string>
    <string name="activity_title_add_warehouse">Add WareHouse</string>
    <string name="toast_please_fill_all_info">Please fill ALL the Information!</string>
    <string name="member_info_shreyas">"Shreyas Pansare(9421947780)"</string>
    <string name="title_disease_dialog">What?</string>
    <string name="for_farmer_as_string">For Farmers</string>
    <string name="help_message_1">"1. This is one field. The piece of land in which only one crop is sowed is termed as Field\n2.Button for refreshing data\n3.Language of application can be changed\n4.Field data can be updated by using this button\n5.Field can be added by using this button"</string>
    <string name="help_message_2">"After pressing the card of field detailed information of that field will be displayed."</string>
    <string name="help_message_3">"Regular updates will be asked to improve user experience"</string>
    <string name="help_message_4">"For GoDown Managers"</string>
    <string name="help_message_5">"1. Stock information\n2.Dispatch button: click it when you want to dispatch\n3.Add stock button"</string>
    <string name="help_message_6">"After pressing dispatch button you will get this pop up. Enter the amount of crop you want to dispatch."</string>
    <string name="help_message_7">"Selected stocks will be suggested by us to minimize storage loss. You can also select other stocks if you want."</string>
    <string name="help_message_8">"Remaining amount in respective stocks will be reflected after dispatching."</string>
    <string name="disease_name">Disease Name :</string>
    <string name="action_taken_as_string">"Action Taken : "</string>
    <string name="done_as_string">done</string>
</resources>