<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group
        android:checkableBehavior="single"
        android:id="@+id/PersonalGroup"

        >
        <item android:id="@+id/nav_signin" android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/sign_in_option_home"
            />

        <item android:id="@+id/nav_myprofile" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/MyProfileString" />

    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/Assitance"
        >
        <item android:id="@+id/nav_notification" android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/Notificationstring" />
        <item android:id="@+id/nav_conse" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/consequencestring" />

    </group>


    <group
        android:checkableBehavior="single"
        android:id="@+id/Settings"
        >
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/NavMenuItemSettings" />

    </group>

        <group
            android:checkableBehavior="single"
            android:id="@+id/MoreGroup"
            >
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/sharestring" />
            <item android:id="@+id/nav_help" android:icon="@android:drawable/ic_menu_help"
                android:title="@string/helpstring" />
            <item android:id="@+id/nav_contactus" android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/contactusstring" />

        </group>



</menu>