<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_accept_dispatch_amount"
        android:textSize="15sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_accept_dispatch_amount"
        android:hint="@string/hint_dispatch_stock_amount"
        android:minWidth="30dp"
        android:inputType="number"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectcrop"
        android:textSize="15sp"
        />


    <Spinner
        android:id="@+id/dialog_dispatch_crop_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok_dialog_dispatch"
            android:text="@string/proceed_as_string"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_dialog_dispatch"
            android:text="@string/cancel_as_string"
            />

    </LinearLayout>


</LinearLayout>