<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="400dp"
    android:paddingBottom="20dp"
    android:id="@+id/disease_dialog_linearlayout"
    android:background="@color/common_google_signin_btn_text_dark_default"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stock_info_title"
        android:text="@string/title_disease_dialog"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="center"
        android:background="@color/colorFaintPrimary"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disease_name"
        android:textSize="17sp"
        android:id="@+id/disease"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/disease_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_taken_as_string"
        android:textSize="17sp"
        android:id="@+id/action_taken"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:singleLine="false"
        android:lines="10"
        android:id="@+id/disease_action"

        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <android.support.v7.internal.widget.ButtonBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_as_string"
                android:id="@+id/cancle"
                android:height="40dp"
                android:width="120dp"
                android:background="@color/colorFaintPrimary"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/done_as_string"
                android:id="@+id/done"
                android:layout_marginLeft="45dp"
                android:height="40dp"
                android:width="120dp"
                android:background="@color/colorFaintPrimary"/>

        </android.support.v7.internal.widget.ButtonBarLayout>

    </RelativeLayout>

</LinearLayout>